--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/calculator.css">
     <link rel="stylesheet" href="css/topbar.css">
-    <title>Document</title>
+    <title>Калькулятор</title>
 </head>
 
 <body>
