value at point button added

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
             </div>
             <div class="content-item hidden" id="polynomial">
                 <div id="poly-wrapper" class="wrapper">
-                    <textarea id="poly-num1" placeholder="Полином P" class="text"></textarea>
-                    <textarea id="poly-num2" placeholder="Полином Q" class="text"></textarea>
+                    <textarea id="poly-num1" placeholder="P" class="text"></textarea>
+                    <textarea id="poly-num2" placeholder="Q" class="text"></textarea>
                     <div id="poly-op-wrapper" class="op-wrapper">
                         <button class="btn-stl poly-op text" data-operand="add">P+Q</button>
                         <button class="btn-stl poly-op text" data-operand="sub">P-Q</button>
                         <button class="btn-stl poly-op text" data-operand="mult">P·Q</button>
+                        <button class="btn-stl poly-x text">P(Q)</button>
                     </div>
                     <textarea id="poly-result" placeholder="=" class="text"></textarea>
                 </div>
